# xverify

./: .gitignore  .gitmodules  CLAUDE.md  README.md  __init__.py  pyproject.toml  requirements.txt  server.py  tool_use.py
.github/workflows/: python-publish.yml  test.yml
examples/: 00_structured_output_with_tools.ipynb  01_gsm8k.ipynb  01_structured_output_with_tools.ipynb  02_gsm8k.ipynb  02_mcp.py  03_mcp.ipynb  03_play.py  04_chess_reasoner.ipynb  05_anthropic_thinking.ipynb  05_test.py  example_tool_use.py  structured_generation.py
src/xverify/: __init__.py  env.py  grpo_guided_config.py  grpo_guided_trainer.py  guided_schema.py  sampling.py  tool.py  tool_use.py  tools.py  xml_gbnf.py  xml_parse.py
src/xverify/examples/: 00_structured_output_with_tools.ipynb  example_tool_use.py  structured_generation.py
src/xverify/grpo/: __init__.py  guided_config.py  guided_trainer.py
src/xverify/oat_grpo/: guided_actor.py
src/xverify/tools/: __init__.py  base.py  convert.py  examples.py  mcp.py  tool_use.py  tools.py
src/xverify/trainers/: grpo.py  grpo_guided_trainer.py  guided_grpo.py
src/xverify/utils/: __init__.py  config_utils.py  logging_utils.py  model_utils.py
src/xverify/xml/: __init__.py  grammar.py  parser.py
tests/: test_grammar.py  test_literal_with_discriminator.py  test_parsing.py  test_parsing_comprehensive.py
