[project]
name = "xverify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tom Pollak", email = "tompollak1000@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "docstring-parser>=0.16",
    "fastcore>=1.7.29",
    "liger-kernel>=0.5.4",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "trl",
    "vllm>=0.7.3",
    "wandb>=0.19.8",
    "xmltodict>=0.14.2",
    "flash-attn",
]

[project.urls]
"Homepage" = "https://github.com/tom-pollak/xverify"
"Repository" = "https://github.com/tom-pollak/xverify"
"Issues" = "https://github.com/tom-pollak/xverify/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["jupyter>=1.1.1", "pytest-cov>=6.0.0", "pytest>=8.3.5"]

[project.optional-dependencies]
tools = [
    "duckduckgo-search>=7.5.1",
    "numpy>=1.26.4",
    "scipy>=1.15.2",
    "sympy>=1.13.1",
    "toolslm>=0.1.0",
]

[tool.uv.sources]
trl = { git = "https://github.com/huggingface/trl.git" }

[tool.uv]
no-build-isolation-package = ["flash-attn"]
