[project]
name = "xverify"
version = "0.1.0"
description = "Guided XML Decoding x GRPO"
readme = "README.md"
authors = [{ name = "Tom Pollak", email = "tompollak1000@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "setuptools>=76.0.0",
    "wheel>=0.45.1",
    "xmltodict>=0.14.2",
    "docstring-parser>=0.16",
    "fastcore>=1.7.29",
    "pydantic>=2.10.6",
    "torch>=2.0.0",
    "trl",
    "vllm>=0.7.3",
    "peft>=0.14.0",
    "wandb>=0.19.8",
    "liger-kernel>=0.5.4",
    "rich>=13.9.4",
]

[project.urls]
"Homepage" = "https://github.com/tom-pollak/xverify"
"Repository" = "https://github.com/tom-pollak/xverify"
"Issues" = "https://github.com/tom-pollak/xverify/issues"

[dependency-groups]
dev = ["jupyter>=1.1.1", "pytest-cov>=6.0.0", "pytest>=8.3.5"]

[project.optional-dependencies]
tools = [
    "toolslm>=0.1.0",
    "duckduckgo-search>=7.5.1",
    "numpy>=1.26.4",
    "scipy>=1.15.2",
    "sympy>=1.13.1",
]
flash-attn = ["flash-attn"]

# until new trl release
[tool.uv.sources]
trl = { git = "https://github.com/huggingface/trl.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.ruff]
line-length = 88
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]

[tool.ruff.lint]
ignore = [
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "E731",
    "E402",
    "E701",
    "E501",
]
